; ModuleID = '/home/carl/AnghaBench/linux/drivers/pwm/extr_pwm-vt8500.c_vt8500_pwm_set_polarity.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/pwm/extr_pwm-vt8500.c_vt8500_pwm_set_polarity.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pwm_chip = type { i32 }
%struct.pwm_device = type { i32 }
%struct.vt8500_chip = type { i64 }

@PWM_POLARITY_INVERSED = common dso_local global i32 0, align 4
@CTRL_INVERT = common dso_local global i32 0, align 4
@STATUS_CTRL_UPDATE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pwm_chip*, %struct.pwm_device*, i32)* @vt8500_pwm_set_polarity to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vt8500_pwm_set_polarity(%struct.pwm_chip* %0, %struct.pwm_device* %1, i32 %2) #0 {
  %4 = alloca %struct.pwm_chip*, align 8
  %5 = alloca %struct.pwm_device*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.vt8500_chip*, align 8
  %8 = alloca i32, align 4
  store %struct.pwm_chip* %0, %struct.pwm_chip** %4, align 8
  store %struct.pwm_device* %1, %struct.pwm_device** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load %struct.pwm_chip*, %struct.pwm_chip** %4, align 8
  %10 = call %struct.vt8500_chip* @to_vt8500_chip(%struct.pwm_chip* %9)
  store %struct.vt8500_chip* %10, %struct.vt8500_chip** %7, align 8
  %11 = load %struct.vt8500_chip*, %struct.vt8500_chip** %7, align 8
  %12 = getelementptr inbounds %struct.vt8500_chip, %struct.vt8500_chip* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load %struct.pwm_device*, %struct.pwm_device** %5, align 8
  %15 = getelementptr inbounds %struct.pwm_device, %struct.pwm_device* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i64 @REG_CTRL(i32 %16)
  %18 = add nsw i64 %13, %17
  %19 = call i32 @readl(i64 %18)
  store i32 %19, i32* %8, align 4
  %20 = load i32, i32* %6, align 4
  %21 = load i32, i32* @PWM_POLARITY_INVERSED, align 4
  %22 = icmp eq i32 %20, %21
  br i1 %22, label %23, label %27

23:                                               ; preds = %3
  %24 = load i32, i32* @CTRL_INVERT, align 4
  %25 = load i32, i32* %8, align 4
  %26 = or i32 %25, %24
  store i32 %26, i32* %8, align 4
  br label %32

27:                                               ; preds = %3
  %28 = load i32, i32* @CTRL_INVERT, align 4
  %29 = xor i32 %28, -1
  %30 = load i32, i32* %8, align 4
  %31 = and i32 %30, %29
  store i32 %31, i32* %8, align 4
  br label %32

32:                                               ; preds = %27, %23
  %33 = load i32, i32* %8, align 4
  %34 = load %struct.vt8500_chip*, %struct.vt8500_chip** %7, align 8
  %35 = getelementptr inbounds %struct.vt8500_chip, %struct.vt8500_chip* %34, i32 0, i32 0
  %36 = load i64, i64* %35, align 8
  %37 = load %struct.pwm_device*, %struct.pwm_device** %5, align 8
  %38 = getelementptr inbounds %struct.pwm_device, %struct.pwm_device* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  %40 = call i64 @REG_CTRL(i32 %39)
  %41 = add nsw i64 %36, %40
  %42 = call i32 @writel(i32 %33, i64 %41)
  %43 = load %struct.vt8500_chip*, %struct.vt8500_chip** %7, align 8
  %44 = load %struct.pwm_device*, %struct.pwm_device** %5, align 8
  %45 = getelementptr inbounds %struct.pwm_device, %struct.pwm_device* %44, i32 0, i32 0
  %46 = load i32, i32* %45, align 4
  %47 = load i32, i32* @STATUS_CTRL_UPDATE, align 4
  %48 = call i32 @pwm_busy_wait(%struct.vt8500_chip* %43, i32 %46, i32 %47)
  ret i32 0
}

declare dso_local %struct.vt8500_chip* @to_vt8500_chip(%struct.pwm_chip*) #1

declare dso_local i32 @readl(i64) #1

declare dso_local i64 @REG_CTRL(i32) #1

declare dso_local i32 @writel(i32, i64) #1

declare dso_local i32 @pwm_busy_wait(%struct.vt8500_chip*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
